
3.60  2012-11-22
  - Improved documentation.
  - Improved tests.

3.59  2012-11-20
  - Improved tests.
  - Fixed memory leak in Mojo::Message::Request.
  - Fixed keep alive bug in Mojo::Server::Daemon.

3.58  2012-11-19
  - Improved documentation.
  - Improved tests.
  - Fixed state bugs in Mojo::Content::MultiPart.
  - Fixed Mojo::UserAgent to remove codes from parser errors.

3.57  2012-11-12
  - Deprecated Mojo::Exception->raw_message.
  - Improved error message accuracy in Mojo::Template by using line
    directives.
  - Improved performance of contains method in Mojo::Asset::File by 100%.
  - Improved documentation.
  - Improved tests.
  - Fixed range bug in Mojo::Asset::Memory.

3.56  2012-11-09
  - Improved performance of contains method in Mojo::Asset::File
    significantly.
  - Improved documentation.
  - Improved tests.
  - Fixed offset bug in Mojo::Asset::File.

3.55  2012-11-08
  - Added gzip compression support to Mojo::UserAgent.
  - Added is_compressed method to Mojo::Content.
  - Improved documentation.
  - Improved tests.
  - Fixed bug that prevented around_dispatch hooks from working correctly in
    embedded applications.
  - Fixed small bug where "chunked" would not always be the default transfer
    encoding.

3.54  2012-11-01
  - Added next and previous methods to Mojo::DOM.
  - Improved documentation.
  - Improved tests.

3.53  2012-10-31
  - Replaced Mojolicious::Guides::CodingGuidelines with
    Mojolicious::Guides::Contributing.
  - Improved documentation.
  - Improved tests.

3.52  2012-10-26
  - Added boolean shortcut support to Mojo::JSON.
  - Added escape attribute to Mojo::Template. (jberger)
  - Added max_buffer_size attribute to Mojo::Content.
  - Added is_limit_exceeded method to Mojo::Content.
  - Improved documentation.
  - Improved tests.

3.51  2012-10-23
  - Improved documentation.
  - Improved tests.
  - Fixed multiple small context bugs.

3.50  2012-10-20
  - Improved option handling of all commands.

3.49  2012-10-19